--- a/app/video_coding/console/templates/console/ovf_list.html
+++ b/app/video_coding/console/templates/console/ovf_list.html
@@ -1,35 +1,46 @@
+{% extends "console/base.html" %}
+
 {% load static %}
 
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-</head>
+{% block title %}
+    Home
+{% endblock %}
 
-<body>
-<table class="table table-hover table-striped">
-  <thead>
-    <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Name</th>
-      <th scope="col">Filename</th>
-      <th scope="col">Status</th>
-      <th scope="col">Created at</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for ovf in page_obj %}
-    <tr onclick="window.location='ovf/{{ ovf.id }}';" style="cursor: pointer;">
-        <th scope="row">{{ ovf.id }}</th>
-        <td>{{ ovf.name }}</td>
-        <td>{{ ovf.file_name }}</td>
-        <td>{{ ovf.get_status_display }}</td>
-        <td>{{ ovf.created_at }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-    <div class="pagination" style="margin: 10px 10px 10px 10px;">
+{% block heading %}
+    Videos list
+{% endblock %}
+
+{% block content %}
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-success" role="alert">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
+
+    <table class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Filename</th>
+          <th scope="col">Status</th>
+          <th scope="col">Created at</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for ovf in page_obj %}
+        <tr onclick="window.location='ovf/{{ ovf.id }}';" style="cursor: pointer;">
+            <th scope="row">{{ ovf.id }}</th>
+            <td>{{ ovf.name }}</td>
+            <td>{{ ovf.file_name }}</td>
+            <td>{{ ovf.get_status_display }}</td>
+            <td>{{ ovf.created_at }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+    <div class="pagination">
         <span class="step-links">
             {% if page_obj.has_previous %}
                 <a href="?page=1">&laquo; first</a>
@@ -47,5 +58,5 @@
         </span>
     </div>
 
-    <a style="margin: 10px 10px 10px 10px;" class="btn btn-primary" href="create" role="button">Create</a>
-</body>
+    <a class="btn btn-primary" href="create" role="button">Create</a>
+{% endblock %}
