--- a/app/video_coding/console/templates/console/ovf_create.html
+++ b/app/video_coding/console/templates/console/ovf_create.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post">{% csrf_token %}
+    <form method="post" enctype="multipart/form-data">{% csrf_token %}
         {% crispy form %}
     </form>
 {% endblock %}
