--- a/app/video_coding/console/static/console/style.css
+++ b/app/video_coding/console/static/console/style.css
@@ -55,3 +55,12 @@ div.content {
 .asteriskField {
     display: none;
 }
+
+/*
+.alert-fixed {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 2px;
+    z-index: 1;
+}
+*/
