added hr after heading for create + delete

--- a/app/video_coding/console/templates/console/ovf_delete.html
+++ b/app/video_coding/console/templates/console/ovf_delete.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block heading %}
-    Delete OVF <{{ object.id }}>
+    Delete OVF <{{ object.id }}><hr>
 {% endblock %}
 
 {% block content %}
