various frontend improvements

--- a/app/video_coding/console/templates/console/ovf_create.html
+++ b/app/video_coding/console/templates/console/ovf_create.html
@@ -4,11 +4,11 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    Create OVF
+    Create experiment
 {% endblock %}
 
 {% block heading %}
-    Create OVF<hr>
+    Create experiment<hr>
 {% endblock %}
 
 {% block content %}
