--- a/app/video_coding/console/templates/console/ovf_details.html
+++ b/app/video_coding/console/templates/console/ovf_details.html
@@ -23,7 +23,7 @@
 
     <hr>
 
-    <h2>Video metrics</h2>
+    <h2>Original video metrics</h2>
         {% if ifr_formset.total_form_count == 0 %}
         <div class="alert alert-info" role="alert">
             There were no metrics selected for the original video!
@@ -59,7 +59,7 @@
 
     <hr>
 
-    <h2>BD Metrics</h2>
+    <h2>Bjøntegaard-Delta (BD) metrics</h2>
 
     {% if bd_metrics_formset.total_form_count == 0 %}
         <div class="alert alert-info" role="alert">
